--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,21 +1,27 @@
 <h1>タスク</h1>
-<div class = "wrapper clearfix">
-  <div class = "container">
-  <% @tasks.each do |task| %>
-    <%# <ul class = "menu"> %>
-      <p>タイトル: <%= task.title %></p>
-      <p>内容: <%= task.content %></p>
-      <p>優先順位: <%= task.priority %></p>
-      <p>ステータス: <%= task.status %></p>
-      <p>終了期限: <%= task.deadline %></p>
-    <%# </ul> %>
-    <ul class = "menu">
-      <li><%= link_to '詳細', task_path(task.id) %></li>
-      <li><%= link_to "編集", edit_task_path(task.id), data: { confirm: '本当に編集していいですか？'} %></li>
-      <li><%= link_to '削除', task_path(task.id), method: :delete, data: { confirm: '本当に削除していいですか？'} %></li>
-    </ul>
-  <% end %>
-  </div>
-</div>
+<table class= "container">
+    <tr>
+      <th>タイトル</th>    
+      <th>内容</th>
+      <th>優先順位</th>
+      <th>ステータス</th>
+      <th>終了期限</th>
+    </tr>
+<% @tasks.each do |task| %>
+  <tr>
+    <td><%= task.title %></td>
+    <td><%= task.content %></td>
+    <td><%= task.priority %></td>
+    <td><%= task.status %></td>
+    <td><%= task.deadline %></td>
+
+    <td><%= link_to '詳細', task_path(task.id) %></td>
+    <td><%= link_to "編集", edit_task_path(task.id), data: { confirm: '本当に編集していいですか？'} %></td>
+    <td><%= link_to '削除', task_path(task.id), method: :delete, data: { confirm: '本当に削除していいですか？'} %></td>
+  </tr>
+<% end %>
+</table>
+
 <br>
-<%= link_to '新しいタスクを投稿' , new_task_path %>
+
+<%= link_to '新しいタスクを投稿' , new_task_path, class: 'btn btn-primary' %>
