--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -8,7 +8,7 @@
       <th>終了期限</th>
     </tr>
 <% @tasks.each do |task| %>
-  <tr>
+  <tr class = 'task_li'>
     <td><%= task.title %></td>
     <td><%= task.content %></td>
     <td><%= task.priority %></td>
