--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,10 +1,24 @@
 <h1>タスク</h1>
-<table class= "container">
+<div>
+  <%= form_with(url:tasks_path,local: true,method: :get) do |form| %>
+    <%= form.label :title,'タスク名検索' %>
+    <%= form.text_field :title, size: 50, value: params[:title] %>
+    <%= form.label :status,'ステータス検索' %>
+    <%= form.select :status,Task.statuses.keys,selected: params[:status],include_blank:"選択" %>
+    <%= form.hidden_field :search, value: 'true' %>
+    <%= form.submit '検索' %>
+  <% end %>
+</div>
+<%= link_to '新規登録', new_task_path, class: "btn btn-primary" %>
+<br>
+<br>
+<table class= "container-fluid">
     <tr>
-      <th>タイトル</th>    
-      <th>内容</th>
-      <th>優先順位</th>
+      <th>タスク名</th>    
+      <th>詳しい内容</th>
+      <th><%= link_to "優先度", tasks_path(sort_expired: "true") %></th>
       <th>ステータス</th>
+      <th>登録日時</th>
       <th><%= link_to "終了期限", tasks_path(sort_expired: "true") %></th>
     </tr>
 <% @tasks.each do |task| %>
@@ -13,6 +27,7 @@
     <td><%= task.content %></td>
     <td><%= task.priority %></td>
     <td><%= task.status %></td>
+    <td><%= task.created_at.strftime('%Y-%m-%d') %></td>
     <td><%= task.deadline %></td>
 
     <td><%= link_to '詳細', task_path(task.id), class: 'btn btn-success' %></td>
@@ -23,5 +38,4 @@
 </table>
 
 <br>
-
-<%= link_to '新しいタスクを投稿' , new_task_path, class: 'btn btn-primary' %>
+<%= paginate @tasks %>
