--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -16,7 +16,7 @@
     <tr>
       <th>タスク名</th>    
       <th>詳しい内容</th>
-      <th><%= link_to "優先度", tasks_path(sort_expired: "true") %></th>
+      <th><%= link_to "優先度", tasks_path(sort_priority: "true") %></th>
       <th>ステータス</th>
       <th>登録日時</th>
       <th><%= link_to "終了期限", tasks_path(sort_expired: "true") %></th>
