--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -22,13 +22,13 @@
       <th><%= link_to "終了期限", tasks_path(sort_expired: "true") %></th>
     </tr>
 <% @tasks.each do |task| %>
-  <tr class = 'task_li'>
-    <td><%= task.title %></td>
+  <tr>
+    <td class= 'task_li'><%= task.title %></td>
     <td><%= task.content %></td>
-    <td><%= task.priority %></td>
+    <td class = 'task_row'><%= task.priority %></td>
     <td><%= task.status %></td>
     <td><%= task.created_at.strftime('%Y-%m-%d') %></td>
-    <td><%= task.deadline %></td>
+    <td class = 'task_limit'><%= task.deadline %></td>
 
     <td><%= link_to '詳細', task_path(task.id), class: 'btn btn-success' %></td>
     <td><%= link_to '編集', edit_task_path(task.id), data: { confirm: '本当に編集していいですか？'}, class: 'btn btn-success' %></td>
