--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,9 +22,12 @@
 .header {
   height: 60px;
   width: 100%;
-  /* float: right; */
-  /* padding-top: 0px; */
-  background-color:darkgoldenrod;
+  font-family: Georgia;
+  /* font-family: monospace; */
+  font-size: 20px;
+  padding: 20px;
+  /* padding-right: 40px; */
+  background-color:coral;
 }
 
 .container {
