--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,16 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class = "content">
+  <body >
     <header class = "header">
+      <% if logged_in? %>
+      <%= link_to "マイページ", user_path(current_user.id) %>
+      <%= link_to "ログアウト", session_path(current_user.id), method: :delete %>
+      <%= link_to "タスク一覧", tasks_path(current_user.tasks) %>
+    <% else %>
+      <%= link_to "ユーザー登録", new_user_path %>
+      <%= link_to "ログイン", new_session_path %>
+    <% end %>
     </header>
 
     <% flash.each do |key, value| %>
