--- a/app/views/tasks/confirm.html.erb
+++ b/app/views/tasks/confirm.html.erb
@@ -1,19 +1,20 @@
-<h3>以下の内容で、送信する。</h3>
+<div class = "container">
+  <h3>以下の内容で、送信する。</h3>
 
-<%= form_with(model: @task, url: tasks_path, local: true) do |form| %>
-  <%= form.hidden_field :title %>
-  <%= form.hidden_field :content %>
-  <%= form.hidden_field :deadline %>
-  <%= form.hidden_field :priority %>
-  <%= form.hidden_field :status %>
+  <%= form_with(model: @task, url: tasks_path, local: true) do |form| %>
+    <%= form.hidden_field :title %>
+    <%= form.hidden_field :content %>
+    <%= form.hidden_field :deadline %>
+    <%= form.hidden_field :priority %>
+    <%= form.hidden_field :status %>
 
-  <p>タイトル:<%= @task.title %></p>
-  <p>本文:<%= @task.content %></p>
-  <p>終了期限:<%= @task.deadline %></p>
-  <p>優先順位:<%= @task.priority %></p>
-  <p>ステータス:<%= @task.status %></p>
+    <p>タイトル:<%= @task.title %></p>
+    <p>本文:<%= @task.content %></p>
+    <p>終了期限:<%= @task.deadline %></p>
+    <p>優先順位:<%= @task.priority %></p>
+    <p>ステータス:<%= @task.status %></p>
 
-  <%= form.submit  "登録する" %>
-  <%= form.submit '戻る', name: 'back' %>
-<% end %>
-
+    <%= form.submit  "登録する", class: "btn btn-success" %>
+    <%= form.submit '戻る', name: 'back', class: "btn btn-info" %>
+  <% end %>
+</div>
