--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,7 @@
-<h2>タスクを作成する</h2>
+<div class = "container">
+  <h2>タスクを作成する</h2>
 
   <%= render 'form' %>
 
   <%= link_to '戻る', tasks_path %>
+</div>
