--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,7 @@
   font-family: Georgia;
   /* font-family: monospace; */
   font-size: 20px;
-  padding: 20px;
+  /* padding: 20px; */
   /* padding-right: 40px; */
   background-color:coral;
 }
@@ -62,6 +62,7 @@ li {
   font-size: 20px;
   color: darkorchid;
   margin-right: 20px;
+  float: left;
 }
 
 p {
