--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,20 +12,30 @@
 
   <body >
     <header class = "header">
+    <ul class = "clearfix">
       <% if logged_in? %>
-      <%= link_to "マイページ", user_path(current_user.id) %>
-      <%= link_to "ログアウト", session_path(current_user.id), method: :delete %>
-      <%= link_to "タスク一覧", tasks_path(current_user.tasks) %>
-    <% else %>
-      <%= link_to "ユーザー登録", new_user_path %>
-      <%= link_to "ログイン", new_session_path %>
-    <% end %>
+        <li><%= link_to "マイページ", user_path(current_user.id), class: 'nav-link' %></li>
+        <li><%= link_to "ログアウト", session_path(current_user.id), method: :delete, class: 'nav-link' %></li>
+        <li><%= link_to "タスク一覧", tasks_path, class: 'nav-link' %></li>
+        <% if current_user.admin? %>
+          <li><%= link_to 'ユーザー一覧', admin_users_path, class: 'nav-link' %></li>
+        <% end %>
+      <% else %>
+        <li><%= link_to "新規登録", new_user_path, class: 'nav-link' %></li>
+        <li><%= link_to "ログイン", new_session_path, class: 'nav-link' %></li>
+      <% end %>
+    </ul>
     </header>
 
-    <% flash.each do |key, value| %>
-        <%= content_tag(:div,value, class: "#{key}") %>
-    <% end %>
-      
+    <%# <% flash.each do |key, value| %>
+        <%# <%= content_tag(:div,value, class: "#{key}") %> 
+    <%# <% end %> 
+
+    <div class="container">
+      <% if flash.notice.present? %>
+       <div class="alert alert-success"><%= flash.notice %></div>
+      <% end %>
+    </div>
     <%= yield %>
 
     <footer class = "footer">
