--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -12,24 +12,24 @@
 <% end %>
 
 <%= form_with(model: [:admin, user], local: true) do |form| %>
-  <div class = "form-group">
+  <div class = "container">
     <%= form.label :name, '名前' %>
     <%= form.text_field :name, class: "form-control" %>
   </div>
-  <div class = "form-group">
+  <div class = "container">
     <%= form.label :email, 'メールアドレス' %>
     <%= form.email_field :email, class: "form-control" %>
   </div>
-  <div class = "form-check">
+  <div class = "container">
     <%= form.label :admin, class: "form-check-label" do %>
       <%= form.check_box :admin, class: "form-check-input" %>
        | 管理者権限
     <% end %>
-  <div class = "form-group">
+  <div class = "container">
     <%= form.label :password, 'パスワード' %>
     <%= form.password_field :password, class: "form-control" %>
   </div>
-  <div class = "form-group">
+  <div class = "container">
     <%= form.label :password_confirmation, 'パスワード確認' %>
     <%= form.password_field :password_confirmation, class: "form-control" %>
   </div>
