--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,9 +1,9 @@
-<div class = "container">
+<div>
 <h1>ユーザー管理画面</h1>
 <br>
 <%= link_to '新規登録',new_admin_user_path, class: 'btn btn-primary' %>
 <br>
-  <table>
+  <table class= "container-fluid">
     <tr>
       <th class>名前</th>
       <th class>メールアドレス</th>
