--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,38 +1,34 @@
-<div class="container">
-  <h4><%= @user.name %>のページ</h4>
-  <% if @tasks.present? %>
-    <div class="user_tasks">
-      <% @tasks.each do |task| %>
-        <div class="task">
-          <div class="task_header">
-            <div class="task_status">
-              <%= task.status %>
-            </div>
-            <h4 class="task_title task_row"><%= task.title %></h4>
-            <div class="task_priority">
-              <%= task.priority %>
-            </div>
-            <%= link_to '詳細', task_path(task.id), class: 'task_show' %>
-            <%= link_to '編集', edit_task_path(task.id) %>
-            <%= link_to '削除', task_path(task.id), method: :delete, data: { confirm: '削除してよろしいですか？' } %>
-          </div>
-          <div class="task_content">
-            <%= task.content %>
-          </div>
-          <div class="task_deadline">
-            <% deadline_date = task.deadline.to_date %>
-            <% num = (deadline_date - Date.today).to_i %>
-            <% if num.negative? %>
-              <%= '終了期限を過ぎています' %>
-            <% else %>
-              <%= "あと#{num}日" %>
-            <% end %>
-          </div>
-        </div>
-      <% end %>
-    </div>
-  <% else %>
-    <%= '当ユーザーの作成したタスクはありません' %>
-  <% end %>
-</div>
+<h1><%= @user.name %>さんのページ</h1>
+<p>名前: <%= @user.name %></p>
+<p>メールアドレス: <%= @user.email %></p> 
+<br>
+<% if @user.tasks.present? %>
+<table class= "container-fluid">
+    <tr>
+      <th>登録者</th>    
+      <th>タスク名</th>    
+      <th>詳しい内容</th>
+      <th><%= link_to "優先度", tasks_path(sort_priority: "true") %></th>
+      <th>ステータス</th>
+      <th>登録日時</th>
+      <th><%= link_to "終了期限", tasks_path(sort_expired: "true") %></th>
+    </tr>
+<% @user.tasks.each do |task| %>
+  <tr>
+    <td><%= current_user.name %></td>
+    <td class= 'task_li'><%= task.title %></td>
+    <td><%= task.content %></td>
+    <td class = 'task_row'><%= task.priority %></td>
+    <td><%= task.status %></td>
+    <td><%= task.created_at.strftime('%Y-%m-%d') %></td>
+    <td class = 'task_limit'><%= task.deadline %></td>
 
+    <td><%= link_to '詳細', task_path(task.id), class: 'btn btn-success' %></td>
+    <td><%= link_to '編集', edit_task_path(task.id), data: { confirm: '本当に編集していいですか？'}, class: 'btn btn-success' %></td>
+    <td><%= link_to '削除', task_path(task.id), method: :delete, data: { confirm: '本当に削除していいですか？'}, class: 'btn btn-success' %></td>
+  </tr>
+<% end %>
+</table>
+<% else %>
+  <%= '当ユーザーの作成したタスクはありません' %>
+<% end %>
