--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,7 +6,7 @@
     <%= form.label :status,'ステータス検索' %>
     <%= form.select :status,Task.statuses.keys,selected: params[:status],include_blank:"選択" %>
     <%= form.hidden_field :search, value: 'true' %>
-    <%= form.submit '検索' %>
+    <%= form.submit '検索', class: 'btn btn-light' %>
   <% end %>
 </div>
 <%= link_to '新規登録', new_task_path, class: "btn btn-primary" %>
