--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,34 @@
-<h1 class = "container"><%= @user.name %>のページ</h1>
-<div class = "container">
-  <p>メールアドレス: <%= @user.email %></p>
+<h1><%= @user.name %>さんのページ</h1>
+<p>名前: <%= @user.name %></p>
+<p>メールアドレス: <%= @user.email %></p> 
+<br>
+<% if @user.tasks.present? %>
+<table class= "container-fluid">
+    <tr>
+      <th>登録者</th>    
+      <th>タスク名</th>    
+      <th>詳しい内容</th>
+      <th><%= link_to "優先度", tasks_path(sort_priority: "true") %></th>
+      <th>ステータス</th>
+      <th>登録日時</th>
+      <th><%= link_to "終了期限", tasks_path(sort_expired: "true") %></th>
+    </tr>
+<% @tasks.each do |task| %>
+  <tr>
+    <td><%= current_user.name %></td>
+    <td class= 'task_li'><%= task.title %></td>
+    <td><%= task.content %></td>
+    <td class = 'task_row'><%= task.priority %></td>
+    <td><%= task.status %></td>
+    <td><%= task.created_at.strftime('%Y-%m-%d') %></td>
+    <td class = 'task_limit'><%= task.deadline %></td>
 
-  <%= link_to "task投稿", new_task_path, class: 'btn btn-info' %>
-  <br>
-</div>
+    <td><%= link_to '詳細', task_path(task.id), class: 'btn btn-success' %></td>
+    <td><%= link_to '編集', edit_task_path(task.id), data: { confirm: '本当に編集していいですか？'}, class: 'btn btn-success' %></td>
+    <td><%= link_to '削除', task_path(task.id), method: :delete, data: { confirm: '本当に削除していいですか？'}, class: 'btn btn-success' %></td>
+  </tr>
+<% end %>
+</table>
+<% else %>
+  <%= '当ユーザーの作成したタスクはありません' %>
+<% end %>
