--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,10 @@
       <% if logged_in? %>
         <li><%= link_to "マイページ", user_path(current_user.id), class: 'nav-link' %></li>
         <li><%= link_to "ログアウト", session_path(current_user.id), method: :delete, class: 'nav-link' %></li>
-        <li><%= link_to "タスク一覧", tasks_path, class: 'nav-link' %></li>
-        <% if current_user.admin? %>
-          <li><%= link_to 'ユーザー一覧', admin_users_path, class: 'nav-link' %></li>
-        <% end %>
+        <li><%= link_to "タスクを見る", tasks_path, class: 'nav-link' %></li>
+        <%# <% if current_user.admin? %> 
+        <li><%= link_to '管理画面', admin_users_path, class: 'nav-link' %></li>
+        <%# <% end %> 
       <% else %>
         <li><%= link_to "新規登録", new_user_path, class: 'nav-link' %></li>
         <li><%= link_to "ログイン", new_session_path, class: 'nav-link' %></li>
