--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<h1>タスク</h1>
+<h1>タスク一覧</h1>
 <div>
   <%= form_with(url:tasks_path,local: true,method: :get) do |form| %>
     <%= form.label :title,'タスク名検索' %>
