--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -23,7 +23,7 @@
   <div class = "container">
     <%= form.label :admin, class: "form-check-label" do %>
       <%= form.check_box :admin, class: "form-check-input" %>
-       | 管理者権限
+       管理者権限
     <% end %>
   <div class = "container">
     <%= form.label :password, 'パスワード' %>
