--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,6 +1,6 @@
 <h1 class = "container"><%= @user.name %>の編集</h1>
 <div class = "container">
-  <%= link_to "一覧", admin_users_path, class: 'btn btn-info' %>
+  <%= link_to "管理画面", admin_users_path, class: 'btn btn-info' %>
   <br>
   <%= render partial: 'form', locals: { user: @user } %>
 </div>
