--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @user.name %>登録</h1>
 <div class = "nav.justify-content-end">
-  <%= link_to "一覧", admin_users_path, class: 'nav-link' %>
+  <%= link_to "管理画面", admin_users_path, class: 'nav-link' %>
   <br>
   <%= render partial: 'form', locals: { user: @user } %>
 </div>
