ラベルの機能を終わりました

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,8 @@
-<h2 class = "container">編集する</h2>
+<div class = "container">
+  <h2 class = "container">編集する</h2>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to '詳細', @task %>
-<%= link_to '戻る', task_path %>
+  <%= link_to '詳細', @task %>
+  <%= link_to '戻る', task_path %>
+</div>
