--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
         <li><%= link_to "タスクを見る", tasks_path, class: 'nav-link' %></li>
         <%# <% if current_user.admin? %> 
         <li><%= link_to '管理画面', admin_users_path, class: 'nav-link' %></li>
+        <li><%= link_to '新規ラベル', labels_path, class: 'nav-link' %></li>
         <%# <% end %> 
       <% else %>
         <li><%= link_to "新規登録", new_user_path, class: 'nav-link' %></li>
