--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,8 @@
-<h1>タスク詳細画面</h1>
+<div class = "container">
+  <h1>タスク詳細画面</h1>
 
-<%= render "form" %>
+  <%= render "form" %>
 
-<%= link_to '編集', edit_task_path(@task) %> |
-<%= link_to '戻る', tasks_path %>
+  <%= link_to '編集', edit_task_path(@task) %> |
+  <%= link_to '戻る', tasks_path %>
+</div>
