--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,6 +12,7 @@
       <th>ステータス</th>
       <th>登録日時</th>
       <th><%= link_to "終了期限", tasks_path(sort_expired: "true") %></th>
+      <th><%= link_to "ラベル", tasks_path(sort_expired: "true") %></th>
     </tr>
 <% @tasks.each do |task| %>
   <tr>
@@ -22,6 +23,11 @@
     <td><%= task.status %></td>
     <td><%= task.created_at.strftime('%Y-%m-%d') %></td>
     <td class = 'task_limit'><%= task.deadline %></td>
+    <td>
+      <% task.labels.each do |label| %>
+        <%= label.name %>
+      <% end %>
+    </td>
 
     <td><%= link_to '詳細', task_path(task.id), class: 'btn btn-success' %></td>
     <td><%= link_to '編集', edit_task_path(task.id), data: { confirm: '本当に編集していいですか？'}, class: 'btn btn-success' %></td>
