labelのテスト終わりました

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,9 +6,10 @@
     <%= form.label :status,'ステータス検索' %>
     <%= form.select :status,Task.statuses.keys,selected: params[:status],include_blank:"選択" %>
     <%= form.label :label_id,'ラベル検索' %>
-    <%= form.select :label_id, options_for_select(Label.pluck(:name, :id)), { include_blank: true } %>
+    <%= form.select :label_id, Label.pluck(:name, :id), { include_blank: true } %>
+    <!-- <%= form.select :label_id, options_for_select(Label.pluck(:name, :id)), { include_blank: true } %> -->
     <%= form.hidden_field :search, value: 'true' %>
-    <%= form.submit '検索', class: 'btn btn-light' %>
+    <%= form.submit '検索', class: 'btn btn-light btn-sm' %>
   <% end %>
 </div>
 <%= link_to '新規登録', new_task_path, class: "btn btn-primary" %>
@@ -26,7 +27,7 @@
       <th><%= link_to "ラベル", tasks_path(sort_expired: "true") %></th>
     </tr>
 <% @tasks.each do |task| %>
-  <tr>
+  <tr class= 'task_all'>
     <td><%= current_user.name %></td>
     <td class= 'task_li'><%= task.title %></td>
     <td><%= task.content %></td>
