--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -35,7 +35,7 @@
     <%= form.date_select :deadline, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="task_label">
     <%= form.collection_check_boxes(:label_ids, Label.all, :id, :name) %>
   </div>
 
